--- a/src/app/routes/list/list.component.html
+++ b/src/app/routes/list/list.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-form-field fxFlex floatPlaceholder="never">
-    <input matInput placeholder="Filter users">
+    <input matInput placeholder="Filter users" #filter>
   </mat-form-field>
   <div fxFlex="10px">&nbsp;</div>
   <button (click)="add()" mat-raised-button fxFlex="90px">
